crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d, 'FF1 FF2 FF3 FF4 FF5 FF6  ff1 ff2 ff3 ff4 ff5 ff6  MS US')\n   FROM (VALUES\n       ('2018-11-02 12:34:56'::timestamp),\n       ('2018-11-02 12:34:56.78'),\n       ('2018-11-02 12:34:56.78901'),\n       ('2018-11-02 12:34:56.78901234')\n   ) d(d);"
---
SelectStmt@0..259
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..75
    FuncCall@7..75
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..16
        Ident@15..16 "d"
      Ascii44@16..17 ","
      Whitespace@17..18 " "
      AConst@18..75
        Sconst@18..75 "'FF1 FF2 FF3 FF4 FF5  ..."
  Ascii41@75..76 ")"
  Newline@76..77 "\n"
  Whitespace@77..80 "   "
  From@80..84 "FROM"
  Whitespace@84..85 " "
  Ascii40@85..86 "("
  RangeSubselect@86..257
    SelectStmt@86..247
      Values@86..92 "VALUES"
      Newline@92..93 "\n"
      Whitespace@93..100 "       "
      Ascii40@100..101 "("
      List@101..133
        TypeCast@101..133
          AConst@101..122
            Sconst@101..122 "'2018-11-02 12:34:56'"
          Typecast@122..124 "::"
          TypeName@124..133
            Timestamp@124..133 "timestamp"
      Ascii41@133..134 ")"
      Ascii44@134..135 ","
      Newline@135..136 "\n"
      Whitespace@136..143 "       "
      Ascii40@143..144 "("
      List@144..168
        AConst@144..168
          Sconst@144..168 "'2018-11-02 12:34:56.78'"
      Ascii41@168..169 ")"
      Ascii44@169..170 ","
      Newline@170..171 "\n"
      Whitespace@171..178 "       "
      Ascii40@178..179 "("
      List@179..206
        AConst@179..206
          Sconst@179..206 "'2018-11-02 12:34:56. ..."
      Ascii41@206..207 ")"
      Ascii44@207..208 ","
      Newline@208..209 "\n"
      Whitespace@209..216 "       "
      Ascii40@216..217 "("
      List@217..247
        AConst@217..247
          Sconst@217..247 "'2018-11-02 12:34:56. ..."
    Ascii41@247..248 ")"
    Newline@248..249 "\n"
    Whitespace@249..252 "   "
    Ascii41@252..253 ")"
    Whitespace@253..254 " "
    Alias@254..257
      Ident@254..255 "d"
      Ascii40@255..256 "("
      Ident@256..257 "d"
  Ascii41@257..258 ")"
  Ascii59@258..259 ";"

