crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT pg_sleep(0.1);
---
SelectStmt@0..21
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    FuncCall@7..19
      Ident@7..15 "pg_sleep"
      Ascii40@15..16 "("
      AConst@16..19
        Fconst@16..19 "0.1"
  Ascii41@19..20 ")"
  Ascii59@20..21 ";"

