crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE TIMESTAMP_TBL;
---
TruncateStmt@0..23
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..22
    Ident@9..22 "TIMESTAMP_TBL"
  Ascii59@22..23 ";"

