crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('Mon Feb 10 17:32:01.5 1997 PST');"
---
InsertStmt@0..68
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..66
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..66
      AConst@34..66
        Sconst@34..66 "'Mon Feb 10 17:32:01. ..."
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

